--- a/MainHtml.html
+++ b/MainHtml.html
@@ -18,7 +18,7 @@
     <div class="GreetingBlock Vlayout">
         <div class="Greeting Hlayout"><img src="C:\Users\Irina\AsterionProj\icons\Circle_Logo.svg" alt="Circle_Logo"  width="40%" >
             <div class="GreetingTextBlock Vlayout"  ><h2>Ветклиника Астарион</h2> 
-                <p>Равным образом новая модель организационной деятельности позволяет выполнять важные задания по разработке новых предложений. Равным образом дальнейшее развитие различных форм деятельности представляет собой интересный эксперимент проверки соответствующий условий активизации. С другой стороны рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Значимость этих проблем настолько очевидна, что новая модель организационной деятельности в значительной степени обуславливает создание модели развития.</p>
+                <p>Равным образом модель организационной деятельности позволяет выполнять важные задания по разработке новых предложений. Равным образом дальнейшее развитие различных форм деятельности представляет собой интересный эксперимент проверки соответствующий условий активизации. С другой стороны рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Значимость этих проблем настолько очевидна, что новая модель организационной деятельности в значительной степени обуславливает создание модели развития.</p>
             </div>
             
         </div>
