--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <button class="DropMenuButton"><p>Анализы</p></button>
                 <button class="DropMenuButton"><p>УЗИ</p></button>
             </div>
-            <script src="C:\Users\Irina\AsterionProj\aster.js"> </script>
+            <script src="Asterion.github.io\aster.js"> </script>
 
         </div>
         <div class="ServicesFirst Hlayout" style="background-color: brown;">
